--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -16,6 +16,8 @@ packages:
   - ruby@2.1.5
   - ruby@2.2.0
   - ruby@2.2.1
+  - ruby@2.2.2
+  - ruby@2.2.3
 
 description: |
   Wercker box with Node.js and Ruby, RVM on Ubuntu 14.04
