--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,5 +1,5 @@
 name: node-ruby-rvm
-version: 1.1.1
+version: 1.1.2
 inherits: wercker/ubuntu12.04-webessentials@1.0.4
 type: main
 platform: ubuntu@14.04
@@ -52,7 +52,9 @@ script: |
   rvm install 2.1.5
   rvm install 2.2.0
   rvm install 2.2.1
-  rvm --default use 2.2.1
+  rvm install 2.2.2
+  rvm install 2.2.3
+  rvm --default use 2.2.2
   echo "gem: --no-rdoc --no-ri" >> $HOME/.gemrc
   echo "RAILS_ENV=test" | sudo tee -a /etc/environment
   echo "RACK_ENV=test" | sudo tee -a /etc/environment
